fix services spacing

--- a/static/css/agency.css
+++ b/static/css/agency.css
@@ -380,7 +380,7 @@ section {
 }
 
 section h2.section-heading {
-    margin-top: 8%;
+    margin-top: 5%;
     font-size: 30px;
 }
 
